--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0"; url="https://f06a-69-167-28-3.ngrok-free.app/garage/">
     <title>Redirecting...</title>
+    <script>
+        window.location.href = "https://f06a-69-167-28-3.ngrok-free.app/garage/";
+    </script>
 </head>
 <body>
-    <p>If you are not redirected automatically, <a href="https://f06a-69-167-28-3.ngrok-free.app/garage/">click here</a>.</p>
+    <p>If you are not redirected automatically, follow this <a href="link-mo">link</a>.</p>
 </body>
 </html>
